Add swagger for todo
